@@ -445,3 +445,4 @@ $string['nogrades'] = 'No, I will refresh originality scores and grades 
 $string['noxmlwriterlibrary'] = 'To use this plugin you will need to have the PHP XMLWriter extension installed on your server.';
 $string['checkupgrade'] = 'Check for available upgrade';
 $string['usinglatest'] = 'You are using the latest version!';
+$string['useturnitin_mod'] = 'Enable Turnitin for {$a}';
