@@ -40,26 +40,33 @@ if (isset($_SESSION["notice"])) {
 }
 
 $plagiarismpluginturnitin = new plagiarism_plugin_turnitin();
-$pluginconfig = $plagiarismpluginturnitin->get_config_settings();
+$supported_mods = array('assign', 'forum', 'workshop');
+$pluginconfig = array();
+foreach ($supported_mods as $mod) {
+    $tmp_pluginconfig = $plagiarismpluginturnitin->get_config_settings('mod_'.$mod);
+    $pluginconfig = array_merge($pluginconfig, $tmp_pluginconfig);
+}
 $plugindefaults = $plagiarismpluginturnitin->get_settings();
 
 // Save Settings.
 if (!empty($action)) {
     switch ($action) {
         case "config":
-            $turnitinuse = optional_param('turnitin_use', 0, PARAM_INT);
-            if ($configfield = $DB->get_record('config_plugins', array('name' => 'turnitin_use', 'plugin' => 'plagiarism'))) {
-                $configfield->value = $turnitinuse;
-                if (! $DB->update_record('config_plugins', $configfield)) {
-                    turnitintooltwo_print_error('settingsupdateerror', 'turnitintooltwo', null, null, __FILE__, __LINE__);
-                }
-            } else {
-                $configfield = new object();
-                $configfield->value = $turnitinuse;
-                $configfield->plugin = 'plagiarism';
-                $configfield->name = 'turnitin_use';
-                if (! $DB->insert_record('config_plugins', $configfield)) {
-                    turnitintooltwo_print_error('settingsinserterror', 'turnitintooltwo', null, null, __FILE__, __LINE__);
+            foreach ($supported_mods as $mod) {
+                $turnitinuse = optional_param('turnitin_use_mod_'.$mod, 0, PARAM_INT);
+                if ($configfield = $DB->get_record('config_plugins', array('name' => 'turnitin_use_mod_'.$mod, 'plugin' => 'plagiarism'))) {
+                    $configfield->value = $turnitinuse;
+                    if (! $DB->update_record('config_plugins', $configfield)) {
+                        turnitintooltwo_print_error('settingsupdateerror', 'turnitintooltwo', null, null, __FILE__, __LINE__);
+                    }
+                } else {
+                    $configfield = new object();
+                    $configfield->value = $turnitinuse;
+                    $configfield->plugin = 'plagiarism';
+                    $configfield->name = 'turnitin_use_mod_'.$mod;
+                    if (! $DB->insert_record('config_plugins', $configfield)) {
+                        turnitintooltwo_print_error('settingsinserterror', 'turnitintooltwo', null, null, __FILE__, __LINE__);
+                    }
                 }
             }
 
